--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "enhance-js",
-  "version": "1.0.0",
+  "version": "beta",
   "description": "EnhanceJS is a library dedicated to extending the capabilities of native JavaScript, aiming to address common data structures, methods, and frequently used algorithms that are not natively supported in JavaScript.",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npx webpack",
+    "test": "node demo/app.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,11 @@
   "bugs": {
     "url": "https://github.com/JunLiangWangX/EnhanceJS/issues"
   },
-  "homepage": "https://github.com/JunLiangWangX/EnhanceJS#readme"
+  "homepage": "https://github.com/JunLiangWangX/EnhanceJS#readme",
+  "dependencies": {
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
+    "webpack": "^5.90.2",
+    "webpack-cli": "^5.1.4"
+  }
 }
