--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "enhance-js",
-  "version": "beta",
+  "version": "0.0.0-beta",
   "description": "EnhanceJS is a library dedicated to extending the capabilities of native JavaScript, aiming to address common data structures, methods, and frequently used algorithms that are not natively supported in JavaScript.",
   "main": "main.js",
   "scripts": {
