--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "enhance-js",
   "version": "0.0.0-beta",
   "description": "EnhanceJS is a library dedicated to extending the capabilities of native JavaScript, aiming to address common data structures, methods, and frequently used algorithms that are not natively supported in JavaScript.",
-  "main": "main.js",
+  "main": "index.js",
   "scripts": {
-    "build": "npx webpack",
-    "test": "node demo/app.js"
+    "build": "npx webpack --mode=production",
+    "test": "npx jest"
   },
   "repository": {
     "type": "git",
@@ -24,9 +24,22 @@
   },
   "homepage": "https://github.com/JunLiangWangX/EnhanceJS#readme",
   "dependencies": {
+    "@babel/core": "^7.23.9",
+    "@babel/plugin-transform-runtime": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-typescript": "^7.23.3",
+    "babel-loader": "^9.1.3",
+    "terser-webpack-plugin": "^5.3.10",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
     "webpack": "^5.90.2",
     "webpack-cli": "^5.1.4"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ],
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
