--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/JunLiangWangX/EnhanceJS.git"
+    "url": "git+https://github.com/JunLiangWangX/BootsJs.git"
   },
   "keywords": [
     "javascript",
@@ -20,10 +20,17 @@
   "author": "JunLiangWang",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/JunLiangWangX/EnhanceJS/issues"
+    "url": "https://github.com/JunLiangWangX/BootsJs/issues"
   },
-  "homepage": "https://github.com/JunLiangWangX/EnhanceJS#readme",
+  "homepage": "https://github.com/JunLiangWangX/BootsJs#readme",
   "dependencies": {
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ],
+  "devDependencies": {
+    "jest": "^29.7.0",
     "@babel/core": "^7.23.9",
     "@babel/plugin-transform-runtime": "^7.23.9",
     "@babel/preset-env": "^7.23.9",
@@ -34,12 +41,5 @@
     "typescript": "^5.3.3",
     "webpack": "^5.90.2",
     "webpack-cli": "^5.1.4"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions"
-  ],
-  "devDependencies": {
-    "jest": "^29.7.0"
   }
 }
