--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "boots-js",
   "version": "0.0.0-beta",
   "description": "BootsJS is a library dedicated to extending the capabilities of native JavaScript, aiming to address common data structures, methods, and frequently used algorithms that are not natively supported in JavaScript.",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "npx webpack --mode=production",
     "test": "npx jest"
