--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -23,11 +23,10 @@ jobs:
       - run: npm run test
       
       - if: ${{ github.event_name == 'push' && success() }}
-        name: Publish
-        uses: selenehyun/gh-push@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
-          COMMIT_FILES: ./dist/*
-          REPO_FULLNAME: JunLiangWangX/BootsJS
-          BRANCH: dist
-          
+        name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with: 
+          personal_token: ${{ secrets.GIT_TOKEN }} # 令牌
+          publish_dir: ./dist # 构建后的文件目录
+          external_repository: JunLiangWangX/BootsJS # 仓库B，格式为：user/repo
+          publish_branch: dist # 仓库B的分支
