--- a/package.json
+++ b/package.json
@@ -26,21 +26,20 @@
     "url": "https://github.com/JunLiangWangX/BootsJs/issues"
   },
   "homepage": "https://github.com/JunLiangWangX/BootsJs#readme",
-  "dependencies": {
-  },
   "browserslist": [
     "> 1%",
     "last 2 versions"
   ],
   "devDependencies": {
-    "jest": "^29.7.0",
     "@babel/core": "^7.23.9",
     "@babel/plugin-transform-runtime": "^7.23.9",
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-typescript": "^7.23.3",
     "babel-loader": "^9.1.3",
+    "jest": "^29.7.0",
     "terser-webpack-plugin": "^5.3.10",
     "ts-loader": "^9.5.1",
+    "typedoc": "^0.25.8",
     "typescript": "^5.3.3",
     "webpack": "^5.90.2",
     "webpack-cli": "^5.1.4"
