--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
             fetch-depth: 0
-      - name: Use Node.js
+      - name: Build And Test Project
         uses: actions/setup-node@v3
         with:
             node-version: 18.x
@@ -23,10 +23,18 @@ jobs:
       - run: npm run test
       
       - if: ${{ github.event_name == 'push' && success() }}
+        name: Publish NPM
         uses: JS-DevTools/npm-publish@v3
         with:
           token: ${{ secrets.NPM_TOKEN }}
           
+      - if: ${{ github.event_name == 'push' && success() }}
+      - name: Generate Doc
+        uses: actions/setup-node@v3
+        with:
+            node-version: 18.x
+      - run: npm run doc
+      
       - if: ${{ github.event_name == 'push' && success() }}
         name: Publish HTML to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
