--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,9 +3,11 @@ on:
   push:
     branches:
       - main
+      - dev
   pull_request:
     branches:
       - main
+      - dev
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -22,20 +24,20 @@ jobs:
       - run: npm run build
       - run: npm run test
       
-      - if: ${{ github.event_name == 'push' && success() }}
+      - if: ${{ github.ref == 'refs/heads/main' && github.event_name == 'push' && success() }}
         name: Publish NPM
         uses: JS-DevTools/npm-publish@v3
         with:
           token: ${{ secrets.NPM_TOKEN }}
           
-      - if: ${{ github.event_name == 'push' && success() }}
+      - if: ${{ github.ref == 'refs/heads/main' && github.event_name == 'push' && success() }}
       - name: Generate Doc
         uses: actions/setup-node@v3
         with:
             node-version: 18.x
       - run: npm run doc
       
-      - if: ${{ github.event_name == 'push' && success() }}
+      - if: ${{ github.ref == 'refs/heads/main' && github.event_name == 'push' && success() }}
         name: Publish HTML to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
