--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
           token: ${{ secrets.NPM_TOKEN }}
           
       - if: ${{ github.ref == 'refs/heads/main' && github.event_name == 'push' && success() }}
-      - name: Generate Doc
+        name: Generate Doc
         uses: actions/setup-node@v3
         with:
             node-version: 18.x
