--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "npx webpack --mode=production",
     "test": "npx jest",
-    "doc":"npx typedoc"
+    "doc": "npx typedoc",
+    "prepare": "husky"
   },
   "repository": {
     "type": "git",
@@ -37,6 +38,7 @@
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-typescript": "^7.23.3",
     "babel-loader": "^9.1.3",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
     "terser-webpack-plugin": "^5.3.10",
     "ts-loader": "^9.5.1",
