--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "typedoc": "^0.25.8",
     "typescript": "^5.3.3",
     "webpack": "^5.90.2",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-merge": "^6.0.1"
   }
 }
