--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "boots-js",
-  "version": "0.8.0-beta",
+  "version": "0.9.0-beta",
   "description": "BootsJS is a library dedicated to extending the capabilities of native JavaScript, aiming to address common data structures, methods, and frequently used algorithms that are not natively supported in JavaScript.",
-  "main": "dist/index.js",
+  "main": "index.js",
   "scripts": {
     "build": "npx webpack --mode=production",
     "test": "npx jest",
