--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,10 @@ jobs:
       - run: npm run test
       
       - if: ${{ github.ref == 'refs/heads/main' && github.event_name == 'push' && success() }}
+        name: Move File
+        run: mv ./dist/* ./
+      
+      - if: ${{ github.ref == 'refs/heads/main' && github.event_name == 'push' && success() }}
         name: Publish NPM
         uses: JS-DevTools/npm-publish@v3
         with:
