--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "boots-js",
-  "version": "0.9.2-beta",
+  "version": "1.0.0",
   "description": "BootsJS is a library dedicated to extending the capabilities of native JavaScript, aiming to address common data structures, methods, and frequently used algorithms that are not natively supported in JavaScript.",
   "main": "index.js",
   "scripts": {
