--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "BootsJS is a library dedicated to extending the capabilities of native JavaScript, aiming to address common data structures, methods, and frequently used algorithms that are not natively supported in JavaScript.",
   "main": "index.js",
   "scripts": {
-    "build": "cross-env NODE_ENV=production npx webpack --mode=production",
-    "dev": "cross-env NODE_ENV=development npx webpack --mode=development",
+    "build": "npx rollup -c",
     "format": "prettier --write src/",
     "test": "npx jest",
     "doc": "npx typedoc",
@@ -35,21 +34,19 @@
     "last 2 versions"
   ],
   "devDependencies": {
-    "@babel/core": "^7.23.9",
-    "@babel/plugin-transform-runtime": "^7.23.9",
-    "@babel/preset-env": "^7.23.9",
-    "@babel/preset-typescript": "^7.23.3",
-    "babel-loader": "^9.1.3",
-    "cross-env": "^7.0.3",
+    "@babel/plugin-transform-runtime": "^7.24.7",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/preset-typescript": "^7.24.7",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^26.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.6",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
-    "terser-webpack-plugin": "^5.3.10",
-    "ts-loader": "^9.5.1",
-    "typedoc": "^0.25.8",
-    "typescript": "^5.3.3",
-    "webpack": "^5.90.2",
-    "webpack-cli": "^5.1.4",
-    "webpack-merge": "^6.0.1"
+    "rollup": "^4.20.0",
+    "tslib": "^2.6.3",
+    "typedoc": "^0.25.8"
   }
 }
